# kuzadesign-miner

./: .gitignore  README.md  electron.js  index.html  miner-worker.js  mock_pool.js  package-lock.json  package.json  stratum-client.js  test-addon.js  test_js_client.js  vite.config.js
mining-addon/: binding.gyp  index.js  package-lock.json  test_addon.js
mining-addon/src/: addon.cpp
mining-core/: CMakeLists.txt
mining-core/build_win/: CMakeCache.txt  Makefile  cmake_install.cmake
mining-core/include/: hash.h  miner.h  stratum.h
mining-core/src/: hash.cpp  miner.cpp  standalone_miner.cpp  worker.cpp
mining-core/src/blake3/: blake3.c  blake3_dispatch.c  blake3_impl.h  blake3_portable.c
mining-core/src/stratum/: client.cpp  job.cpp  protocol.cpp
mining-core/test/: test_hash.cpp  test_miner.cpp  test_stratum.cpp
src/: App.jsx  main.jsx
src/components/: Dashboard.jsx  Settings.jsx  Statistics.jsx
src/hooks/: useMiningStats.js
src/styles/: app.css
